# deep-finance-research

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  requirements.txt  setup.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl
research_outputs/kgptalkie/sessions1/: research_request.md
scripts/: agent_utils.py  base_tools.py  deep_prompts.py  file_tools.py  prompts.py  rag_tools.py  schema.py
